rspec-tools/tests/resources/invalid-asciidoc/unnamed_language.adoc
We shouldn't mention the language C++ by its name.

Nor by c++ for what it's worth.

We should use the built-in attribute {cpp} instead.